tests/fixtures/errors/bad_return_type.z
# E0100: function declares out i64 but returns a String.
greet: function out i64 is {
    return "hello"
}
main: function is {}
